# asedia-shell

./: Cargo.toml  PLAN.md  README.md  flake.nix
lock/: Cargo.toml
logout/: Cargo.toml
logout/src/: app.rs  main.rs
main/: Cargo.toml
main/src/: app.rs  main.rs
shell/: Cargo.toml
shell/src/: app.rs  main.rs
shell/src/quickcontrol/: mod.rs
src/: app.rs  main.rs
src/quickcontrol/: bar.rs
utils/: Cargo.toml
utils/src/: lib.rs
