[package]
name = "daywatch-shell"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
battery = "0.7.8"
chrono = { version = "0.4.42", features = ["alloc", "std", "clock", "now"], default-features = false }
iced = { version = "0.13.1", features = ["tokio"] }
iced_layershell = "0.13.7"
